@@ -52,6 +52,7 @@ version ? (????-??-??):
   - 5 default base layers for maps [chilan]
   - ported to xajax 0.5 [chilan]
   - toolbar on netdevmap and possibility to ping any host (event not included in database) [chilan]
+  - netmap popups are draggable thanks to DragPopup class written by Matt Walker [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
